# Drone-Reinforcement-Learning-Obstacle-Avoidance

./: .gitignore  PROJECT_PLAN.md  README.md  a.ipynb  pyproject.toml  requirements.txt  setup.py
config/algorithms/: ablation_configs.yaml  ppo_baseline.yaml  proposed_method.yaml  sac_baseline.yaml
config/drone_models/: custom_drone.yaml  quadcopter_cf2x.yaml  racing_drone.yaml
config/environments/: forest_dense.yaml  forest_dynamic.yaml  forest_simple.yaml  test_environments.yaml
config/training/: curriculum.yaml  hyperparams.yaml
docs/experimental_protocols/: README.md
docs/mathematical_formulation/: README.md
experiments/comparison/: benchmark_comparison.py
notebooks/: 01_environment_analysis.ipynb  02_baseline_exploration.ipynb  03_method_development.ipynb  04_mathematical_formulation.ipynb  05_ablation_studies.ipynb  06_results_visualization.ipynb  07_statistical_analysis.ipynb  08_paper_figures.ipynb
paper/tex/: main.tex
src/algorithms/: base_algorithm.py
src/environments/: __init__.py  base_env.py  forest_env.py  procedural_forest.py
src/environments/rewards/: base_reward.py
