[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_forest_navigation_rl"
version = "0.1.0"
description = "RL for drone navigation in forests"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
